# singularity-videos

./: CONTRIBUTING.md  README.md  meson.build
data/: dev.sinty.videos.desktop  dev.sinty.videos.json
po/: POTFILES.in  meson.build
resources/: dev.sinty.videos.gresource.xml
src/: gst_player.vala  main.vala  player_window.vala
ui/: meson.build  player.vetro
